# Nmap Changelog ($Id$); -*-text-*-

o Add a new script, db2-info.nse, that enhances DB2 database instance detection.  
  The script provides detection when version probes fail, but will default to 
  the value provided the version probes if that value is more precise. The 
  script also detects the server platform and database instance name. 
  [Tom]

o Updated DB2 port ranges to be broader in order to improve detection of the
  database instances that typically live in the 50000-50025 and 60000-60025
  range. [Tom] 

o Fixed a bug that could cause an infinite loop ("Unable to find
  listening socket in get_rpc_results") in RPC scan. The loop would
  happen when scanning a port that sent no responses, and there was at
  least one other port to scan. Thanks to Lionel Cons for reporting
  the problem. [David]

o [NSE] Improved the authentication used by the smb-* scripts. Instead of 
  looking in a bunch of places (registry, commandline, etc) for the
  usernames/passwords, a table is kept. This lets us store any number
  of accounts for later use, and remove them if they stop working. This
  also fixes a bug where typing in a password incorrectly would lock
  out an account (since it wouldn't stop trying the account in question). 
  [Ron]

o [NSE] smb-enum-shares.nse now checks whether or not a share is writable
  by attempting to write a file (and deleting it if it's successful). 
  Significantly cleaned up the code, as well. [Ron]

o [NSE] New script: smbv2-enabled.nse. Basically, it checks if the
  smbv2 protocol is enabled on the server. [Ron]

o [NSE] New script: smb-psexec.nse. This script implements the functionality
  found in Microsoft Sysinternals' psexec utility and Metasploit's psexec
  "exploit". In addition to this script, some default configurations
  are also included. [Ron]

o Added support for connecting to nameservers over IPv6. IPv6 addresses
  can be used in /etc/resolv.conf or with the --dns-servers option. The